--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,10 @@ android {
     }
 
     buildFeatures {
-        viewBinding true
+        dataBinding = true
+        viewBinding = true
     }
+
 }
 
 dependencies {
