--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
 buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
     dependencies {
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0'
         classpath 'com.google.gms:google-services:4.3.15'
         classpath 'com.android.tools.build:gradle:7.3.3'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
@@ -10,3 +15,7 @@ plugins {
     id 'com.android.library' version '7.4.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
+
+/*task clean(type: Delete){
+    delete rootProject.buildDir
+}*/
