--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.bookapp">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".MyApplication"
@@ -11,35 +13,37 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
-        tools:targetApi="31">
+        android:theme="@style/Theme.MaterialComponents.Light.NoActionBar">
+        <activity
+            android:name=".PdfViewActivity"
+            android:exported="false" />
         <activity
             android:name=".PdfDetailActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".PdfEditActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".PdfListAdminActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".PdfAddActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".CategoryAddActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".DashboardAdminActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".DashboardUserActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".LoginActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".RegisterActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
